--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,101 +1,49 @@
-<!DOCTYPE html>
-<html class="h-full bg-white" lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Giriş Yap</title>
-  </head>
-  <body class="h-full">
-    <div class="flex min-h-full flex-col justify-center px-6 py-12 lg:px-8">
-      <div class="sm:mx-auto sm:w-full sm:max-w-sm">
-        <img
-          class="mx-auto h-10 w-auto"
-          src="https://www.dabnet.com.tr/wp-content/uploads/2022/09/logo-300x94.jpg"
-          alt="Dabnet"
+<div class="displayTable">
+  <div class="displayTableCell">
+
+    <div class="authBlock">
+      <h3>Sign In</h3>
+      <div class="formGroup">
+        <input
+          type="text"
+          class="formControl"
+          placeholder="Username"
+          #userName
+          required
         />
-        <h2
-          class="mt-10 text-center text-2xl font-bold leading-9 tracking-tight text-gray-900"
-        >
-          Giriş Yap
-        </h2>
       </div>
+      <div class="formGroup">
+        <input
+          type="password"
+          class="formControl"
+          placeholder="Password"
+          #userPassword
+          required
+        />
+      </div>
+      <!-- Calling SignIn Api from AuthService -->
+      <div class="formGroup">
 
-      <div class="mt-10 sm:mx-auto sm:w-full sm:max-w-sm">
-        <form class="space-y-6" action="#" method="POST">
-          <div>
-            <label
-              for="email"
-              class="block text-sm font-medium leading-6 text-gray-900"
-              >E-Posta</label
-            >
-            <div class="mt-2">
-              <input
-                id="email"
-                name="email"
-                type="email"
-                autocomplete="email"
-                placeholder="hello@gmail.com"
-                required
-                class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-gray-400 sm:text-sm sm:leading-6"
-              />
-            </div>
-          </div>
-
-          <div>
-            <div class="flex items-center justify-between">
-              <label
-                for="password"
-                class="block text-sm font-medium leading-6 text-gray-900"
-                >Şifre</label
-              >
-              <div class="text-sm">
-                <a
-                  href="#"
-                  class="font-semibold text-gray-400 hover:text-gray-500"
-                  >Şifremi Unuttum</a
-                >
-              </div>
-            </div>
-            <div class="mt-2">
-              <input
-                formControlName="password"
-                placeholder="*****"
-                id="password"
-                name="password"
-                type="password"
-                autocomplete="current-password"
-                required
-                class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-400 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-gray-400 sm:text-sm sm:leading-6"
-              />
-            </div>
-          </div>
-
-          <div>
-            <button
-              type="submit"
-              class="flex w-full justify-center rounded-md bg-gray-400 px-3 py-1.5 text-sm font-semibold leading-6 text-white shadow-sm hover:bg-gray-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-gray-400"
-            >
-              Giriş Yap
-            </button>
-          </div>
-        </form>
-
-        <p class="mt-10 text-center text-sm text-gray-500">
-          Üye Değil Misin?
-          <a
-            href="register"
-            class="font-semibold leading-6 text-gray-400 hover:text-gray-500"
-            >Hemen Üye Ol!</a
-          >
-        </p>
-
-        <button (click)="logInWithGoogle"
-          class="w-full flex flex-row items-center rounded-md bg-gray-400 px-3 py-1.5 text-white font-semibold hover:bg-gray-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-gray-400"
-        >
-          <ng-icon class="w-9 ms-0" name="ionLogoGoogle"></ng-icon>
-          <span class="w-full ms-0 mr-6">Google ile Giriş Yap</span>
-        </button>
+        <button (click)="login(userName.value, userPassword.value)">Login</button>
+      </div>
+      <div class="formGroup">
+        <span class="or"><span class="orInner">Or</span></span>
+      </div>
+      <div class="forgotPassword">
+        <span routerLink="/forgot-password">Forgot Password?</span>
       </div>
     </div>
-  </body>
-</html>
+    <div class="redirectToLogin">
+      <!-- <span
+        >Don't have an account?<span
+          class="redirect"
+          routerLink="register"
+
+        >
+          Sign Up</span
+        ></span> -->
+        <button (click)="register(userName.value, userPassword.value)">Register</button>
+
+    </div>
+  </div>
+</div>
