--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -21,43 +21,8 @@
       </div>
 
       <div class="mt-10 sm:mx-auto sm:w-full sm:max-w-sm">
-        <form class="space-y-6" action="#" method="POST">
-          <div>
-            <label
-              for="name"
-              class="block text-sm font-medium leading-6 text-gray-900"
-              >Ad</label
-            >
-            <div class="mt-2">
-              <input
-                id="name"
-                name="name"
-                type="text"
-                autocomplete="name"
-                required
-                class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-gray-400 sm:text-sm sm:leading-6"
-              />
-            </div>
-          </div>
-
-          <div>
-            <label
-              for="surname"
-              class="block text-sm font-medium leading-6 text-gray-900"
-              >Soyad</label
-            >
-            <div class="mt-2">
-              <input
-                id="surname"
-                name="surname"
-                type="text"
-                autocomplete="surname"
-                required
-                class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-gray-400 sm:text-sm sm:leading-6"
-              />
-            </div>
-          </div>
-
+        <form class="space-y-6">
+          
           <div>
             <label
               for="email"
@@ -70,7 +35,9 @@
                 name="email"
                 type="email"
                 autocomplete="email"
+                placeholder="E-mail Adresiniz"
                 required
+                #userMail
                 class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-gray-400 sm:text-sm sm:leading-6"
               />
             </div>
@@ -89,16 +56,37 @@
                 name="password"
                 type="password"
                 autocomplete="new-password"
+                placeholder="Şifreniz"
                 required
+                #userPassword
                 class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-gray-400 sm:text-sm sm:leading-6"
               />
             </div>
           </div>
-
+          <div>
+            <label
+              for="password"
+              class="block text-sm font-medium leading-6 text-gray-900"
+              >Şifre Tekrar</label
+            >
+            <div class="mt-2">
+              <input
+                formControlName="password"
+                id="password"
+                name="password"
+                type="password"
+                autocomplete="new-password"
+                required
+                #userPassword
+                placeholder="Şifrenizi Tekrar Giriniz"
+                class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-gray-400 sm:text-sm sm:leading-6"
+              />
+            </div>
+          </div>
           <div>
             <button
-              type="submit"
-              class="flex w-full justify-center rounded-md bg-gray-400 px-3 py-1.5 text-sm font-semibold leading-6 text-white shadow-sm hover:bg-gray-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-gray-400"
+              (click)="register(userMail.value, userPassword.value)"
+              class="formGroup flex w-full justify-center rounded-md bg-gray-400 px-3 py-1.5 text-sm font-semibold leading-6 text-white shadow-sm hover:bg-gray-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-gray-400"
             >
               Üye Ol
             </button>
@@ -114,12 +102,12 @@
           >
         </p>
 
-        <button
+        <!-- <button
           class="w-full flex flex-row items-center rounded-md bg-gray-400 px-3 py-1.5 text-white font-semibold hover:bg-gray-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-gray-400"
         >
           <ng-icon class="w-9 ms-0" name="ionLogoGoogle"></ng-icon>
           <span class="w-full ms-0 mr-6">Google ile Üye Ol</span>
-        </button>
+        </button> -->
       </div>
     </div>
   </body>
