en son çalışan versiyon

--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -60,7 +60,7 @@
         >
           Sign Up</span
         ></span> -->
-        <button (click)="register(userName.value, userSurname.value, userMail.value, userPassword.value)">Register</button>
+        <button (click)="register(userMail.value, userPassword.value)">Register</button>
 
     </div>
   </div>
